iipod-metal/templates/etc/kubernetes/manifests/patched-nginx.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
